<resources>
    <string name="app_name">MedInfo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MedInfo</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_on">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_sign_in">Already have an account? Sign in using your email and password!</string>
    <string name="title_sign_up">Are you a new user? Create an account for free!</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_middlename">Middlename</string>
    <string name="hint_date">Date</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_sex">Sex</string>


    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_password_dont_match">Passwords do not match!</string>
    <string name="error_wrong_name">Not a valid name!</string>
    <string name="error_invalid_address">Address should be as \"Street, number, city\"</string>
</resources>
